add screenshot for noise